:memo: Lower-cases language used for syntax highlighting

--- a/_posts/2020-06-06-write-cli.md
+++ b/_posts/2020-06-06-write-cli.md
@@ -23,7 +23,7 @@ cd ~/git/hub/development-tutorials/python-first-library
 [python_first_library/cli/__init__.py]: #python_first_librarycli__init__py ""
 
 
-```Python
+```python
 #!/usr/bin/env python3
 
 
